fdo#42144 WW8 export: avoid writing pointless empty footers

Regression from 1348288905ffa75d3634eee4392ba4660d28cdb9 (mismerge, I
guess), when header was enabled, actually empty footer was exported,
even in case footer was disabled.

Change-Id: Ied55dc2a9f0faef87689c07935a47db384d37e1a